--- a/_publications/2020-04-11-you.md
+++ b/_publications/2020-04-11-you.md
@@ -13,7 +13,7 @@ Introduction
 ===
 
 <div style="width:100%;">
-    <img src="/images/you-demo.jpg" style=" display: block;height:400px;vertical-align: middle;margin-left: auto;margin-right: auto;">
+    <img src="/images/you-demo.JPG" style=" display: block;height:400px;vertical-align: middle;margin-left: auto;margin-right: auto;">
 </div>
 
 
