--- a/_publications/2020-04-11-you.md
+++ b/_publications/2020-04-11-you.md
@@ -12,9 +12,7 @@ venue:
 Introduction
 ===
 
-<div style="width:100%;">
-    <img src="/images/you-demo.JPG" style=" display: block;height:400px;vertical-align: middle;margin-left: auto;margin-right: auto;">
-</div>
+<div style="width:100%;"><img src="/images/you-demo.JPG" style=" display: block;height:400px;vertical-align: middle;margin-left: auto;margin-right: auto;"></div>
 
 
 Despite the continuing efforts to improve the engagingness and consistency of chit-chat dialogue systems, the majority of current work simply focus on mimicking human-like responses, leaving understudied the aspects of modeling understanding between interlocutors. The research in cognitive science, instead, suggests that understanding is an essential signal for a high-quality chit-chat conversation. Motivated by this, we propose P^2 Bot, a transmitter-receiver based framework with the aim of explicitly modeling understanding. Specifically, P^2 Bot incorporates mutual persona perception to enhance the quality of personalized dialogue generation. Experiments on a large public dataset, Persona-Chat, demonstrate the effectiveness of our approach, with a considerable boost over the state-of-the-art baselines across both automatic metrics and human evaluations.
