Update citation & media

--- a/_publications/2020-06-13-howfar.md
+++ b/_publications/2020-06-13-howfar.md
@@ -7,7 +7,7 @@ date: 2020-06-13
 venue:
 ---
 
-\[[PAPER](https://arxiv.org/pdf/1909.08905.pdf)\] \[[CODE](https://github.com/microsoft/ContextualSP)\]
+\[[PAPER](https://arxiv.org/pdf/1909.08905.pdf)\] \[[CODE](https://github.com/microsoft/ContextualSP)\] \[[MEDIA](https://mp.weixin.qq.com/s/HtE6ouXYRIzucgRXR2yBRg)\]
 
 Introduction
 ===
@@ -21,7 +21,7 @@ Cite
 
 ```latex
 @inproceedings{qian2020how,
-  title={How Far are We from Effective Context Modeling? An Exploratory Study on Semantic Parsing in Context twitter},
+  title={How Far are We from Effective Context Modeling? An Exploratory Study on Semantic Parsing in Context},
   author={Qian, Liu and Bei, Chen and Jiaqi, Guo and Jian-Guang, Lou and Bin, Zhou and Dongmei, Zhang},
   booktitle={IJCAI},
   year={2020}
