update two papers

--- a/_publications/2020-11-09-what.md
+++ b/_publications/2020-11-09-what.md
@@ -2,7 +2,7 @@
 title: "\"What Do You Mean by That?\" A Parser-Independent Interactive Approach for Enhancing Text-to-SQL"
 collection: publications
 permalink: /publication/2020-11-09-what
-excerpt: 'Yuntao Li, Bei Chen, **Qian Liu**, Yan Gao, Jian-Guang Lou, Yan Zhang, Dongmei Zhang<br>In *Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (**EMNLP-2020**)'
+excerpt: 'Yuntao Li, Bei Chen, **Qian Liu**, Yan Gao, Jian-Guang Lou, Yan Zhang, Dongmei Zhang<br>In *Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing* (**EMNLP-2020**)'
 date: 2020-11-01
 venue:
 ---
