--- a/_publications/2022-01-21-tapex.md
+++ b/_publications/2022-01-21-tapex.md
@@ -2,7 +2,7 @@
 title: "TAPEX: Table Pre-training via Learning a Neural SQL Executor"
 collection: publications
 permalink: /publication/2022-01-21-tapex
-excerpt: '**Qian Liu**\*, Bei Chen, Jiaqi Guo, Morteza Ziyadi, Zeqi Lin, Weizhu Chen, Jian-Guang Lou<br>In *International Conference on Learning Representations 2022* (**ICLR-2022**)'
+excerpt: '**Qian Liu**, Bei Chen, Jiaqi Guo, Morteza Ziyadi, Zeqi Lin, Weizhu Chen, Jian-Guang Lou<br>In *International Conference on Learning Representations 2022* (**ICLR-2022**)'
 date: 2022-01-21
 venue:
 ---
