--- a/_publications/2021-09-24-entity.md
+++ b/_publications/2021-09-24-entity.md
@@ -1,36 +1,26 @@
 ---
-title: "FANDA: A Novel Approach to Perform Follow-up Query Analysis"
+title: "Entity Linking Meets Deep Learning: Techniques and Solutions"
 collection: publications
-permalink: /publication/2019-01-23-fanda
-excerpt: '**Qian Liu**, Bei Chen, Jian-Guang Lou, Ge Jin, Dongmei Zhang<br>In *Thirty-third AAAI Conference on Artificial Intelligence (**AAAI-2019**, Oral)*'
-date: 2019-01-23
+permalink: /publication/2021-09-24-entity
+excerpt: 'Wei Shen\*, **Yuhan Li**, Yinan Liu, Jiawei Han, Jianyong Wang, Xiaojie Yuan<br> In *IEEE Transactions on Knowledge and Data Engineering (**TKDE-2021**)*'
+date: 2021-09-24
 venue:
 ---
 
-\[[PAPER](https://arxiv.org/pdf/1901.08259.pdf)\] \[[DATA](https://github.com/SivilTaram/FollowUp)\] \[[SLIDES](/files/fanda-slides.pdf)\]
+\[[PAPER](https://arxiv.org/abs/2109.12520)\] 
 
 
-Natural Language Interfaces to Databases (NLIDB, a.k.a. NL-To-SQL, Semantic Parsing) allows users to search databases using natural language instead of SQL-like query languages. While saving the users from having to learn query languages, multi-turn interaction with NLIDB usually involves multiple queries where contextual information is vital to understand the users' query intents. In this paper, we address a typical contextual understanding problem, termed as follow-up query analysis. **Our work summarizes typical follow-up query scenarios and provides the new FollowUp dataset with 1000 query triples on 120 tables**(Below).
-
-| Scenario  | Example |
-|:---|:---|
-| Analytica | Precedent : In 1995, is there any network named CBC?<br> Follow-up : Any TSN?<br>Fused : In 1995, is there any network named TSN? |
-| Compare | Precedent : How much money has Smith earned?<br>Follow-up : Compare it with Bill Collins.<br>Fused : Compare money Smith earned with Bill Collins. |
-| Calc & Stats | Precedent : List all universities founded before 1855.<br>Follow-up : Show their number.<br>Fused : Show the number of all universities founded before 1855. |
-| Extremum |Precedent : Which stadium has the most capacity?<br>Follow-up : Which get the highest attendance?<br>Fused : Which stadium get the highest attendance? |
-| Filter |Precedent : How many roles are from studio paramount?<br>Follow-up : List all titles produced by that studio.<br>Fused : List all titles produced by studio paramount. |
-| Group | Precedent : Show the industry which has the most companies?<br>Follow-up : Show in different countries.<br>Fused : Show the industry which has the most companies in different countries. |
-| Sort | Precedent : Show all chassis produced after the year 1990.<br>Follow-up : Sort them by year.<br>Fused : Show all chassis produced after the year 1990 and sort by year. |
-| Search | Precedent : What position did Sid O’Neill play?<br>Follow-up : Which players else are in the same position?<br>Fused : Which players play in the position of Sid O’Neill excluding Sid O’Neill? |
+Entity linking (EL) is the process of linking entity mentions appearing in web text with their corresponding entities in a knowledge base. EL plays an important role in the fields of knowledge engineering and data mining, underlying a variety of downstream applications such as knowledge base population, content analysis, relation extraction, and question answering. In recent years, deep learning (DL), which has achieved tremendous success in various domains, has also been leveraged in EL methods to surpass traditional machine learning based methods and yield the state-of-the-art performance. In this survey, we present a comprehensive review and analysis of existing DL based EL methods. First of all, we propose a new taxonomy, which organizes existing DL based EL methods using three axes: embedding, feature, and algorithm. Then we systematically survey the representative EL methods along the three axes of the taxonomy. Later, we introduce ten commonly used EL data sets and give a quantitative performance analysis of DL based EL methods over these data sets. Finally, we discuss the remaining limitations of existing methods and highlight some promising future directions.
 
 Cite
 ===
 
 ```latex
-@inproceedings{liu2019fanda,
-  title={\textsc{FAnDa}: A Novel Approach to Perform Follow-up Query Analysis},
-  author={Liu, Qian and Chen, Bei and Lou, Jian-Guang and Jin, Ge and Zhang, Dongmei},
-  booktitle ={AAAI},
-  year={2019}
+@article{shen2021entity,
+  title={Entity linking meets deep learning: Techniques and solutions},
+  author={Shen, Wei and Li, Yuhan and Liu, Yinan and Han, Jiawei and Wang, Jianyong and Yuan, Xiaojie},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2021},
+  publisher={IEEE}
 }
 ```
