--- a/_publications/2021-09-24-entity.md
+++ b/_publications/2021-09-24-entity.md
@@ -2,7 +2,7 @@
 title: "Entity Linking Meets Deep Learning: Techniques and Solutions"
 collection: publications
 permalink: /publication/2021-09-24-entity
-excerpt: 'Wei Shen\*, **Yuhan Li**, Yinan Liu, Jiawei Han, Jianyong Wang, Xiaojie Yuan<br> In *IEEE Transactions on Knowledge and Data Engineering (**TKDE-2021**)*'
+excerpt: 'Wei Shen\*, **Yuhan Li**, Yinan Liu, Jiawei Han, Jianyong Wang, Xiaojie Yuan<br> In *IEEE Transactions on Knowledge and Data Engineering (**IEEE TKDE-2021**)*'
 date: 2021-09-24
 venue:
 ---
