--- a/_publications/2022-04-23-fanda.md
+++ b/_publications/2022-04-23-fanda.md
@@ -2,7 +2,7 @@
 title: "Community Question Answering Entity Linking via Leveraging Auxiliary Data"
 collection: publications
 permalink: /publication/2022-04-21-community
-excerpt: '**Yuhan Li**, Wei Shen\*, Jianbo Gao, Yadong Wang<br> In *the 31st International Joint Conference on Artificial Intelligence (**IJCAI-2022**)*'
+excerpt: '**Yuhan Li**, Wei Shen\*, Jianbo Gao, Yadong Wang<br> In *the 31st International Joint Conference on Artificial Intelligence (**IJCAI-2022, CCF-A**)*'
 date: 2022-04-21
 venue:
 ---
