--- a/_publications/2022-10-06-TIARA.md
+++ b/_publications/2022-10-06-TIARA.md
@@ -4,23 +4,23 @@ collection: publications
 permalink: /publication/2022-10-06-TIARA
 excerpt: 'Yiheng Shu, Zhiwei Yu, **Yuhan Li**, Börje Karlsson, Tingting Ma, Yuzhong Qu, Chin-Yew Lin<br> In *Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (**EMNLP-2022, CCF-B**)*'
 date: 2022-10-06
-venue: NJU & NKU & HIT & MSRA
+venue: MSRA
 ---
 
-<!-- \[[PAPER](https://ieeexplore.ieee.org/document/9560019)\]  -->
+\[[PAPER](https://arxiv.org/abs/2210.12925)\] 
 
 
-<!-- Entity linking (EL) is the process of linking entity mentions appearing in web text with their corresponding entities in a knowledge base. EL plays an important role in the fields of knowledge engineering and data mining, underlying a variety of downstream applications such as knowledge base population, content analysis, relation extraction, and question answering. In recent years, deep learning (DL), which has achieved tremendous success in various domains, has also been leveraged in EL methods to surpass traditional machine learning based methods and yield the state-of-the-art performance. In this survey, we present a comprehensive review and analysis of existing DL based EL methods. First of all, we propose a new taxonomy, which organizes existing DL based EL methods using three axes: embedding, feature, and algorithm. Then we systematically survey the representative EL methods along the three axes of the taxonomy. Later, we introduce ten commonly used EL data sets and give a quantitative performance analysis of DL based EL methods over these data sets. Finally, we discuss the remaining limitations of existing methods and highlight some promising future directions. -->
+Pre-trained language models (PLMs) have shown their effectiveness in multiple scenarios. However, KBQA remains challenging, especially regarding coverage and generalization settings. This is due to two main factors: i) understanding the semantics of both questions and relevant knowledge from the KB; ii) generating executable logical forms with both semantic and syntactic correctness. In this paper, we present a new KBQA model, TIARA, which addresses those issues by applying multi-grained retrieval to help the PLM focus on the most relevant KB contexts, viz., entities, exemplary logical forms, and schema items. Moreover, constrained decoding is used to control the output space and reduce generation errors. Experiments over important benchmarks demonstrate the effectiveness of our approach. TIARA outperforms previous SOTA, including those using PLMs or oracle entity annotations, by at least 4.1 and 1.1 F1 points on GrailQA and WebQuestionsSP, respectively. 
+Specifically on GrailQA, TIARA outperforms previous models in all categories, with an improvement of 4.7 F1 points in zero-shot generalization.
 
-<!-- Cite
-=== -->
+Cite
+===
 
-<!-- ```latex
-@article{shen2021entity,
-  title={Entity linking meets deep learning: Techniques and solutions},
-  author={Shen, Wei and Li, Yuhan and Liu, Yinan and Han, Jiawei and Wang, Jianyong and Yuan, Xiaojie},
-  journal={IEEE Transactions on Knowledge and Data Engineering},
-  year={2021},
-  publisher={IEEE}
+```latex
+@article{shu2022tiara,
+  title={TIARA: Multi-grained Retrieval for Robust Question Answering over Large Knowledge Bases},
+  author={Shu, Yiheng and Yu, Zhiwei and Li, Yuhan and Karlsson, B{\"o}rje F and Ma, Tingting and Qu, Yuzhong and Lin, Chin-Yew},
+  journal={arXiv preprint arXiv:2210.12925},
+  year={2022}
 }
-``` -->
+```
